--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
+    "googleapis": "^144.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3"
@@ -30,6 +31,11 @@
     "vite": "^7.1.7"
   }
 }
+
+
+
+
+
 
 
 
