--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
+    "dotenv": "^17.2.3",
     "googleapis": "^144.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -32,19 +33,3 @@
     "vite": "^7.1.7"
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
